<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="opening_bracket">(</string>
    <string name="change_sign">+/-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="percent">%</string>
    <string name="sqrt">√</string>
    <string name="xpow">x^2</string>
    <string name="xpowy">x^y</string>
    <string name="equation_view">%1$s</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="calculator">Calculator</string>
    <string name="surname">Made by: Kamil Sasin</string>
    <string name="about_description">A calculator application made for a laboratory assignment</string>
    <string name="toast_message">Invalid Operation</string>
    <string name="toast_content_description">Error</string>
</resources>