<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@color/cardview_dark_background"
    android:paddingHorizontal="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/simple"
            style="@style/mainMenuButton"
            android:text="@string/simple"
            app:backgroundTint="@color/purple_200">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/advanced"
            style="@style/mainMenuButton"
            android:text="@string/advanced"
            app:backgroundTint="@color/purple_200">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/about"
            style="@style/mainMenuButton"
            android:text="@string/about"
            app:backgroundTint="@color/purple_200">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit"
            style="@style/mainMenuButton"
            android:text="@string/exit">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>